# email_newsletter

./: Cargo.toml  Dockerfile  routes.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-196926d8fe982212d343a3fc4057c9b7c6e179b28a47fb4c900eed04e584c1a9.json  query-5655e8bd189f79d06c2202a1d3f500354a19342c23f9334104764efe2f97dab0.json  query-a259c055a4642d22c7d184d595a83548708c807f0b270f9b0ac18507a1d0c495.json  query-dc751e3279049e6951e54803b6ba88b211afed054170dbdcdbaaf403d94ea488.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260430102039_create_subscriptions_table.sql  20260505150442_make_status_not_null_in_subscriptions.sql  20260514180506_create_users_table.sql  20260527101332_seed_user.sql  20260601162923_create_idempotency_table.sql  20260609083733_create_newsletter_issue_table.sql  20260609084612_create_issue_delivery_queue_table.sql
scripts/: init_db  init_redis  subscribe_request
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: authentication.rs  middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletters/: get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
