[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# no need to specify name, defaults to package.name
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
config = "0.15.22"
once_cell = "1.21.4"
reqwest = "0.13.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
